--- a/src/main/resources/job-seeker-profile.html
+++ b/src/main/resources/job-seeker-profile.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Email Confirmation</title>
 </head>
 <body>
-<h3>please confirm your email to proceed further.</h3>
-
+    <h2>Job seeker profile page</h2>
 </body>
 </html>
